WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278388
Fix incorrect use of adoptNS
https://bugs.webkit.org/show_bug.cgi?id=278388
Summary
Fix incorrect use of adoptNS
Per Arne Vollan
Reported
2024-08-20 09:46:35 PDT
Fix incorrect use of adoptNS when creating a NSURL from bookmark data.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-20 09:47:01 PDT
<
rdar://problem/134350866
>
Per Arne Vollan
Comment 2
2024-08-20 09:49:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32460
EWS
Comment 3
2024-08-20 14:04:53 PDT
Committed
282517@main
(65998f012271): <
https://commits.webkit.org/282517@main
> Reviewed commits have been landed. Closing PR #32460 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug