Fix incorrect use of adoptNS https://bugs.webkit.org/show_bug.cgi?id=278388 rdar://134350866

Reviewed by Ben Nham and Chris Dumez.

It is incorrect to use adoptNS when calling +[NSURL URLByResolvingBookmarkData].

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::publishProgress):

Canonical link: https://commits.webkit.org/282517@main