Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm
@@ -96,7 +96,8 @@ void Download::publishProgress(const URL& url, std::span<const uint8_t> bookmark
 
     BOOL bookmarkIsStale = NO;
     NSError* error = nil;
-    m_bookmarkURL = adoptNS([NSURL URLByResolvingBookmarkData:m_bookmarkData.get() options:NSURLBookmarkResolutionWithoutUI relativeToURL:nil bookmarkDataIsStale:&bookmarkIsStale error:&error]);
+    m_bookmarkURL = [NSURL URLByResolvingBookmarkData:m_bookmarkData.get() options:NSURLBookmarkResolutionWithoutUI relativeToURL:nil bookmarkDataIsStale:&bookmarkIsStale error:&error];
+    ASSERT(m_bookmarkURL);
     if (!m_bookmarkURL)
         NSLog(@"Unable to create bookmark URL, error = %@", error);
 
